gatekeeper/templates/k8sblockrootuser.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockrootuser
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRootUser
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockrootuser

        violation[{"msg": msg}] {
          security_context := get_pod_security_context
          security_context.runAsUser == 0
          msg := "Pod securityContext.runAsUser is set to 0 (root), which is forbidden (Risk F-04)."
        }

        violation[{"msg": msg}] {
          container := get_containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container '%v' securityContext.runAsUser is set to 0 (root), which is forbidden (Risk F-04).", [container.name])
        }

        get_pod_security_context := sc {
          sc := input.review.object.spec.securityContext
        }
        get_pod_security_context := sc {
          sc := input.review.object.spec.template.spec.securityContext
        }

        get_containers[container] {
          container := input.review.object.spec.containers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.template.spec.containers[_]
        }
