gatekeeper/templates/k8srequiredresources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        violation[{"msg": msg}] {
          container := get_containers[_]
          missing_limits(container)
          msg := sprintf("Container '%v' must specify resources.limits for cpu and memory (Risk F-02).", [container.name])
        }

        get_containers[container] {
          container := input.review.object.spec.containers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.template.spec.containers[_]
        }

        missing_limits(container) {
          not container.resources.limits
        }
        missing_limits(container) {
          not container.resources.limits.cpu
        }
        missing_limits(container) {
          not container.resources.limits.memory
        }
